fixing dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,12 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "tailwindcss/preflight";
-@tailwind utilities;
+@import "tailwindcss/utilities";
 
 @custom-variant dark (&:is(.dark *));
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 @layer base {
   @theme inline {
